// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should display the hotspot newsbox 1`] = `
<NewsBox
  onClose={[Function]}
  title="issue.type.SECURITY_HOTSPOT.plural"
>
  <p>
    issues.hotspots.helper
  </p>
  <p
    className="text-right spacer-top"
  >
    <Link
      onlyActiveOnIndex={false}
      style={Object {}}
      target="_blank"
      to="/documentation/user-guide/security-hotspots/"
    >
      learn_more
    </Link>
  </p>
</NewsBox>
`;

exports[`should display the hotspot tooltip helper only 1`] = `
<span
  className="display-flex-center"
>
  <IssueTypeIcon
    className="little-spacer-right"
    query="SECURITY_HOTSPOT"
  />
   
  issue.type.SECURITY_HOTSPOT
  <HelpTooltip
    className="little-spacer-left"
    overlay={
      <React.Fragment>
        <p>
          issues.hotspots.helper
        </p>
        <hr
          className="spacer-top spacer-bottom"
        />
        <Link
          onClick={[Function]}
          onlyActiveOnIndex={false}
          style={Object {}}
          target="_blank"
          to="/documentation/user-guide/security-hotspots/"
        >
          learn_more
        </Link>
      </React.Fragment>
    }
  />
</span>
`;

exports[`should display the hotspot tooltip helper only 2`] = `
<span
  className="display-flex-center"
>
  <IssueTypeIcon
    className="little-spacer-right"
    query="SECURITY_HOTSPOT"
  />
   
  issue.type.SECURITY_HOTSPOT
  <HelpTooltip
    className="little-spacer-left"
    overlay={
      <React.Fragment>
        <p>
          issues.hotspots.helper
        </p>
        <hr
          className="spacer-top spacer-bottom"
        />
        <Link
          onClick={[Function]}
          onlyActiveOnIndex={false}
          style={Object {}}
          target="_blank"
          to="/documentation/user-guide/security-hotspots/"
        >
          learn_more
        </Link>
      </React.Fragment>
    }
  />
</span>
`;

exports[`should render open by default 1`] = `
<FacetBox
  property="types"
>
  <FacetHeader
    clearLabel="reset_verb"
    fetching={false}
    name="issues.facet.types"
    onClear={[Function]}
    onClick={[Function]}
    open={true}
    values={
      Array [
        "issue.type.VULNERABILITY",
        "issue.type.CODE_SMELL",
      ]
    }
  />
  <FacetItemsList>
    <FacetItem
      active={false}
      disabled={true}
      halfWidth={false}
      key="BUG"
      loading={false}
      name={
        <span
          className="display-flex-center"
        >
          <IssueTypeIcon
            className="little-spacer-right"
            query="BUG"
          />
           
          issue.type.BUG
        </span>
      }
      onClick={[Function]}
      stat={0}
      value="BUG"
    />
    <FacetItem
      active={true}
      disabled={false}
      halfWidth={false}
      key="VULNERABILITY"
      loading={false}
      name={
        <span
          className="display-flex-center"
        >
          <IssueTypeIcon
            className="little-spacer-right"
            query="VULNERABILITY"
          />
           
          issue.type.VULNERABILITY
        </span>
      }
      onClick={[Function]}
      stat="2"
      value="VULNERABILITY"
    />
    <FacetItem
      active={true}
      disabled={false}
      halfWidth={false}
      key="CODE_SMELL"
      loading={false}
      name={
        <span
          className="display-flex-center"
        >
          <IssueTypeIcon
            className="little-spacer-right"
            query="CODE_SMELL"
          />
           
          issue.type.CODE_SMELL
        </span>
      }
      onClick={[Function]}
      stat="5"
      value="CODE_SMELL"
    />
    <FacetItem
      active={false}
      disabled={false}
      halfWidth={false}
      key="SECURITY_HOTSPOT"
      loading={false}
      name={
        <span
          className="display-flex-center"
        >
          <IssueTypeIcon
            className="little-spacer-right"
            query="SECURITY_HOTSPOT"
          />
           
          issue.type.SECURITY_HOTSPOT
        </span>
      }
      onClick={[Function]}
      stat="1"
      value="SECURITY_HOTSPOT"
    />
  </FacetItemsList>
  <MultipleSelectionHint
    options={4}
    values={2}
  />
</FacetBox>
`;
